Setup for JBoss

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,19 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 }
+configurations {
+    all*.exclude module : 'spring-boot-starter-logging'
+}
+
+war {
+     archiveName 'temp-platform.war'
+	enabled = true
+}
+
+bootWar {
+    archiveName 'temp-platform.war'
+	enabled = true
+}
 
 tasks.named('test') {
 	useJUnitPlatform()
